--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,7 +11,7 @@ source:
   sha256: fc5a78ea4390959834e71fe460d700d02cab1dabb73aa79ae702cefaee8ec207
 
 build:
-  number: 0
+  number: 1
   script: {{ PYTHON }} -m pip install . --no-deps --ignore-installed -vv
   noarch: python
 
@@ -28,6 +28,8 @@ requirements:
 test:
   imports:
     - drms
+  commands:
+    - python -c "from pkg_resources import get_distribution; get_distribution("drms")"
 
 about:
   home: https://github.com/sunpy/drms
