--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ source:
 
 build:
   number: 2
-  script: {{ PYTHON }} -m pip install . --no-deps --ignore-installed -vv
+  script: {{ PYTHON }} -m pip install . --no-deps -vv
   noarch: python
 
 requirements:
@@ -26,10 +26,13 @@ requirements:
     - pandas
 
 test:
+  requires:
+    - setuptools
   imports:
     - drms
   commands:
-    - python -c "from pkg_resources import get_distribution; get_distribution('drms')"
+    - python -c "from pkg_resources import get_distribution; print(get_distribution('drms'))"
+    - python -c "from importlib.metadata import version; print(version('drms'))"
 
 about:
   home: https://github.com/sunpy/drms
