--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,12 +18,12 @@ build:
 requirements:
   host:
     - pip
-    - python >=3.7
+    - python >=3.9
     - setuptools_scm
   run:
     - {{ pin_compatible('numpy') }}
     - pandas
-    - python >=3.7
+    - python >=3.9
     - packaging
 
 test:
@@ -49,7 +49,6 @@ about:
 
 extra:
   recipe-maintainers:
-    - SolarDrew
-    - kbg
+    - wtbarnes
     - Cadair
     - nabobalis
