--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,12 +18,12 @@ build:
 requirements:
   host:
     - pip
-    - python >=3.9
+    - python >=3.10
     - setuptools_scm
   run:
-    - {{ pin_compatible('numpy') }}
+    - numpy
     - pandas
-    - python >=3.9
+    - python >=3.10
     - packaging
 
 test:
