--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -35,7 +35,7 @@ test:
     - drms
   commands:
     - python -c "from pkg_resources import get_distribution; print(get_distribution('drms'))"
-    - python -c "from importlib.metadata import version; print(version('drms'))
+    - python -c "from importlib.metadata import version; print(version('drms'))"
     - pytest --pyargs drms --remote-data=none
 
 about:
